[gd_scene load_steps=10 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://assets/ui/balloon/balloon.gd" id="1_36de5"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="FontFile" uid="uid://ds6trkkj4lw5e" path="res://assets/font/alkhemikal/Alkhemikal.ttf" id="2_etrsa"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_72ixx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font = ExtResource("2_etrsa")
default_font_size = 56
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[node name="DialogueWindow" type="CanvasLayer"]
layer = 2
script = ExtResource("1_36de5")

[node name="Balloon" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_qq3yp")

[node name="PortraitLeft" type="TextureRect" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PortraitRight" type="TextureRect" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueLeft" type="Control" parent="Balloon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="Balloon/DialogueLeft"]
visible = false
clip_children = 2
layout_mode = 2
offset_left = 510.0
offset_top = 655.0
offset_right = 1410.0
offset_bottom = 945.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Balloon/DialogueLeft"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 480.0
offset_top = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueLabelLeft" parent="Balloon/DialogueLeft/MarginContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
text = "Dialogue..."
seconds_per_step = 0.05

[node name="DialogueRight" type="Control" parent="Balloon"]
unique_name_in_owner = true
layout_direction = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="Balloon/DialogueRight"]
visible = false
clip_children = 2
layout_mode = 2
offset_left = 510.0
offset_top = 655.0
offset_right = 1410.0
offset_bottom = 945.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Balloon/DialogueRight"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 480.0
offset_top = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueLabelRight" parent="Balloon/DialogueRight/MarginContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
text = "Dialogue..."

[node name="Responses" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_right = 230.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
text = "Response example"

[node name="LeftSpeaker" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[node name="RightSpeaker" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="spoke" from="Balloon/DialogueLeft/MarginContainer/DialogueLabelLeft" to="." method="_on_dialogue_label_left_spoke"]
[connection signal="spoke" from="Balloon/DialogueRight/MarginContainer/DialogueLabelRight" to="." method="_on_dialogue_label_right_spoke"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
[connection signal="focus_exited" from="Balloon/Responses/ResponsesMenu/ResponseExample" to="." method="_on_response_example_focus_exited"]
